fixed spacing for h2 title of card section, added padding to card section, aligned icon with h2

--- a/app/assets/stylesheets/components/_explore-card.scss
+++ b/app/assets/stylesheets/components/_explore-card.scss
@@ -8,7 +8,7 @@
 
 .explore-card-container {
     background: #325B20;
-    margin-top: 50px;
+    margin-top: 16px;
 }
 
 .explore-card {
